# biblical-evals

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  cli.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260213_0405_access_controls_and_user_reset.py
apps/api/config/: models.yaml  perspectives.yaml  prompt_templates.yaml  scoring_dimensions.yaml
apps/api/questions/factual/: biblical_knowledge.yaml
apps/api/questions/interpretive/: ethics.yaml
apps/api/questions/theological/: biblical_narrative.yaml  christology.yaml  soteriology.yaml
apps/api/src/: config.py  main.py
apps/api/src/api/: access.py  config_routes.py  evaluations.py  health.py  questions.py  reports.py  responses.py  reviews.py
apps/api/src/core/: jwt.py
apps/api/src/db/: models.py  repository.py
apps/api/src/dependencies/: auth.py
apps/api/src/loaders/: config_loader.py  question_loader.py
apps/api/src/models/: __init__.py  evaluation.py  question.py  response.py  score.py
apps/api/src/observability/: __init__.py  context.py  logging.py  middleware.py
apps/api/src/reporting/: generator.py
apps/api/src/runners/: import_runner.py  litellm_runner.py
apps/api/tests/: conftest.py  test_access_api.py  test_aggregator.py  test_api_more.py  test_api_routes.py  test_api_units.py  test_core_logic.py  test_health.py  test_loaders.py  test_request_context.py  test_runners.py  test_runners_and_loaders.py
(+53 files in other folders)
